<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="32dp"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingHorizontal="15dp"
        android:paddingVertical="5dp"
        tools:targetApi="lollipop">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingTop="6dp"
            android:text="System"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="64dp"
        android:orientation="horizontal"
        android:paddingHorizontal="15dp"
        android:paddingVertical="5dp">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginRight="10dp"
            android:src="@drawable/ic_sound"
            android:layout_marginEnd="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingTop="6dp"
            android:text="@string/background_music"
            android:textSize="16sp" />

        <Switch
            android:id="@+id/musicSwitch"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:checked="true"
            android:switchMinWidth="56dp"
            android:textOff="OFF"
            android:textOn="ON" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingHorizontal="15dp"
        android:paddingVertical="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingTop="6dp"
            android:text="Account"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingHorizontal="15dp"
        android:paddingVertical="5dp">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginRight="10dp"
            android:src="@drawable/ic_update_profile_user"
            android:layout_marginEnd="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingTop="6dp"
            android:text="@string/change_nickname_text"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingHorizontal="15dp"
        android:paddingVertical="5dp">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginRight="10dp"
            android:src="@drawable/ic_arrow"
            android:layout_marginEnd="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingTop="6dp"
            android:text="@string/logout_text"
            android:textSize="16sp" />
    </LinearLayout>
</LinearLayout>